--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.16",
+    "daisyui": "^4.6.0",
     "flowbite-react": "^0.7.2",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
