--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tabler/icons-react": "^2.46.0",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.6.0",
     "flowbite-react": "^0.7.2",
