--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.6.0",
     "flowbite-react": "^0.7.2",
+    "google-map-react": "^2.2.1",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
