--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^4.6.0",
     "flowbite-react": "^0.7.2",
     "google-map-react": "^2.2.1",
+    "google-maps-react": "^2.0.6",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
