--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^2.46.0",
+    "@vis.gl/react-google-maps": "^0.5.0",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.6.0",
     "flowbite-react": "^0.7.2",
