--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vis.gl/react-google-maps": "^0.5.0",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.6.0",
+    "emailjs-com": "^3.2.0",
     "flowbite-react": "^0.7.2",
     "google-map-react": "^2.2.1",
     "google-maps-react": "^2.0.6",
