--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tabler/icons-react": "^2.46.0",
     "@vis.gl/react-google-maps": "^0.5.0",
+    "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.6.0",
     "emailjs-com": "^3.2.0",
@@ -20,6 +22,7 @@
     "google-maps-react": "^2.0.6",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
+    "react-animate-on-scroll": "^2.1.7",
     "react-dom": "^18.2.0",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.21.3",
