--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-animate-on-scroll": "^2.1.7",
     "react-dom": "^18.2.0",
     "react-image-gallery": "^1.3.0",
+    "react-pdf": "^7.7.0",
     "react-router-dom": "^6.21.3",
     "swiper": "^11.0.5",
     "tailwindcss": "^3.4.1"
